# entity/balance.go
@@ -1,0 +1,5 @@
+package entity
+
+type GetBalanceAmountResp struct {
+	Amount float64 `json:"net_amount"`
+}
